Table User {
  id int [pk, increment]
  username varchar
  email varchar
  password varchar
  full_name varchar
  date_of_birth date
  gender varchar
  is_authorized boolean
  avatar varchar
}

Table Student {
  id int [pk, increment]
  user_id int [ref: - User.id]
  full_name varchar
  mssv varchar
  is_active boolean
}

Table Classroom {
  id int [pk, increment]
  created_by int [ref: > User.id]
  name varchar
  description text
  invite_code varchar
}

Table EnrollmentRequest {
  id int [pk, increment]
  student_id int [ref: > Student.id]
  classroom_id int [ref: > Classroom.id]
  status varchar
}

Table Subject {
  id int [pk, increment]
  created_by int [ref: > User.id]
  name varchar
  description text
}

Table Chapter {
  id int [pk, increment]
  subject_id int [ref: > Subject.id]
  name varchar
  order int
}

Table Section {
  id int [pk, increment]
  chapter_id int [ref: > Chapter.id]
  name varchar
  order int
}

Table Question {
  id int [pk, increment]
  section_id int [ref: > Section.id]
  created_by int [ref: > User.id]
  prompt text
  question_type varchar
  correct_answer_text text
  image varchar
  is_active boolean
}

Table AnswerOption {
  id int [pk, increment]
  question_id int [ref: > Question.id]
  text varchar
  is_correct_bool boolean
  correct_order int
  order int
}

Table OnlineExam {
  id int [pk, increment]
  created_by int [ref: > User.id]
  classroom_id int [ref: > Classroom.id]
  title varchar
  description text
  duration_minutes int
  start_time datetime
  end_time datetime
  is_published boolean
}

Table ExamQuestion {
  id int [pk, increment]
  exam_id int [ref: > OnlineExam.id]
  question_id int [ref: > Question.id]
  order int
}

Table ExamAttempt {
  id int [pk, increment]
  exam_id int [ref: > OnlineExam.id]
  student_id int [ref: > Student.id]
  start_time datetime
  submit_time datetime
  score float
  is_completed boolean
  auto_submitted boolean
}

Table OnlineAnswer {
  id int [pk, increment]
  attempt_id int [ref: > ExamAttempt.id]
  question_id int [ref: > Question.id]
  selected_options json
  is_correct boolean
  score float
}

Table PaperTest {
  id int [pk, increment]
  created_by int [ref: > User.id]
  classroom_id int [ref: > Classroom.id]
  title varchar
  num_questions int
  num_choices int
  num_variants int
}

Table PaperTestQuestion {
  id int [pk, increment]
  test_id int [ref: > PaperTest.id]
  question_id int [ref: > Question.id]
  order int
}

Table PaperTestVariant {
  id int [pk, increment]
  test_id int [ref: > PaperTest.id]
  variant_code varchar
  question_order json
  answer_shuffles json
}

Table PaperSubmission {
  id int [pk, increment]
  test_id int [ref: > PaperTest.id]
  student_id int [ref: > Student.id]
  variant_id int [ref: > PaperTestVariant.id]
  detected_mssv varchar
  submission_image varchar
  total_score float
  is_graded boolean
}

Table PaperAnswerDetected {
  id int [pk, increment]
  submission_id int [ref: > PaperSubmission.id]
  question_id int [ref: > Question.id]
  is_correct boolean
  score float
}
